# mod_aliasr

./: Makefile  Makefile.am  README.md  mod_aliasr.c  mod_aliasr.cpp
autoload_configs/: aliasr.xml
